# sleuth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: changelog.yml  ci.yml  codecov.yml  doc.yml  template-sync.yml
benches/: bench_scanner.rs
docs/: ARCHITECTURE.md  BROWSER_SUPPORT.md  CONTRIBUTING.md  SITES.md
examples/: async_search.rs  basic_search.rs
issues/sleuth/done/: bug-2025-11-25-fix-steam-false-positive.md  enhancement-2025-11-24-add-architecture-diagrams.md  enhancement-2025-11-24-scaffold-repo-structure.md  enhancement-2025-11-25-add-sites-for-each-category.md  feature-2025-11-24-add-site-type-filtering.md  feature-2025-11-24-refactor-to-request-interface.md
issues/sleuth/in_progress/: bug-2025-11-25-fix-onlyfans-reddit-false-positive.md  enhancement-2025-11-24-add-architecture-diagrams.md  enhancement-2025-11-24-scaffold-repo-structure.md  enhancement-2025-11-25-add-sites-for-each-category.md  feature-2025-11-24-add-site-type-filtering.md  feature-2025-11-24-refactor-to-request-interface.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/config/: mod.rs  sites.rs  timeout.rs  user_agent.rs
src/core/: engine.rs  mod.rs  result.rs  scanner.rs
src/data/: mod.rs  search_result.rs  site_info.rs
src/http/: client.rs  mod.rs  rate_limiter.rs
src/request/: browser.rs  http.rs  mod.rs  tor.rs  trait_impl.rs
src/sites/: mod.rs  registry.rs  site.rs
src/sites/dev/: github.rs  (+1 more)
src/utils/: error.rs  logger.rs  mod.rs  validation.rs
tests/: integration_cli.rs  integration_engine.rs
tests/common/: mod.rs
(+12 files in other folders)
